test/src/e2e_vm_tests/test_programs/should_pass/language/dependencies/src/inner/double_inner/double_bar.sw
library double_bar;
//use ::foo::Foo;

pub struct DoubleBar {
    a: u32,
}
